css/style.css
/* ... */
.testimony hr {
     width: 25%;
     margin: 4px;
     color: white;
     height: .5px;
     border: none;
     background-color: white;
}

.testimony img {
     border-radius: 100px;
     height: 80px;
     opacity: 60%;
}

.testimony > aside {
     width: 80%;
     z-index: 2;
     font-size: clamp(1rem, 2vw, 2rem);

}

.title {
     font-weight: 200;
     font-size: 1.5em;
}

.name {
     font-size: clamp(1.5rem, 3vw, 3em);
     font-weight: 700;
}

.testimony > span {
     z-index: 2;
}

.testimony > i {
     font-size: 70px;
     z-index: 2;
}


.success-main {
     width: 500px;
     min-height: 400px;
     text-align: center;
     align-items: center;
     justify-items: center;
     display: flex;
     flex-direction: column;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
}

.success-main h2 {
     font-size: 8rem;
     margin: 0 0 1rem 0;
}

.success-main a {
     border: 5px solid crimson;
     font-size: 2rem;
     margin-top: 20px;
     padding: 5px 30px;
     border-radius: 15px;
     box-shadow: 0px 10px 0px crimson;
     transition: all ease-in-out .2s;
     width: 100px;
}

.success-main span {
     font-size: 1.5rem;
     font-weight: 200;
}

.success-main a:hover {
     box-shadow: 0px 0px 0px crimson;
     transform: translateY(10px);
}

.success-main img {
     width: 250px;
     transform: translateX(25px);
}

.contact-hero {
     height: 400px;
     background-image: url(/images/hero_prod.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
}

.ignite-hero {
     height: 400px;
     background-image: url(/images/hero_photos.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
}

.learn-hero {
     height: 350px;
     background-image: url(/images/visionreyshowcaseredcarpet.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
}

.video-hero {
     height: 350px;
     background-image: url(/images/hero_actor.webp);
     background-position: top -230px right 0px;
     background-repeat: no-repeat;
     background-size: cover;
}

.contact-text {
     width: 50%;
     margin: 0 auto;
     padding-right: 10%;
     color: #ffffff;
     gap: 15px;
}

.contact-text > * {
     font-size: clamp(.75rem, 1.4vw, 1.5rem);
}

.contact-text > h3 {
     color: crimson;
     font-weight: 600;
     font-size: 2em;
     margin: 0;
}

.contact-text > p {
     margin: 3px;
}

.contact-form {
     background-color: rgb(255, 255, 255);
     padding: 1em;
     width: 100%;
     text-align: center;
}

select {
     cursor: pointer;
}

.contact-form  input {
     width: 50%;
     border: 2px solid rgb(198, 14, 14);
     border-radius: 6px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.550), inset 3px 3px 3px rgba(0, 0, 0, 0.550);
     margin-top: 1em;
     cursor: text;
}
.contact-form > input:first-child{
     margin-top: 0;
}

.contact-form > input:nth-child(5){
     padding-bottom: 8em;
}

.contact-form > input:focus  {
     outline-width: 2px;
     outline-style: solid;
     outline-color: red;
}

.button {
     background-color: crimson;
     color: white;
     padding: .5em 0;
     width: 20%;
     border: 2px solid crimson;
     border-radius: 4px;
}

.contact-us-button {
     padding: 5px;
     margin: 20px 25%;
     width: 50%;
     font-size: 1.5em;
     font-weight: 600;
}


.sundown-hero {
     height: 350px;
     background-image: url(/images/sundown.webp);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
}

.sundown-main .sundown-list .cont-text-cont-main li{
     text-align: left;
     padding: 10px;
}

.sundown-main {
     padding-bottom: 60px;
}

.sundown-main img {
     width: 70%;
     display: block;
     margin: 0 auto;
}

.sundown-header {
     display: block;
     width: 60%;
     margin: 100px auto;
     text-align: center;
}

.sundown-header h1 {
     font-size: 4.5rem;
     color: crimson;
     font-weight: 500;
}

.sundown-header span {
     text-align: center;
     display: block;
     font-style: italic;
     font-size: 2rem;
     font-weight: 200;
}

.sundown-header p {
     padding-top: 40px;
     font-size: 2rem;
}

.crew-bios {
     width: 700px;
     margin: 0 auto;
}

.crew-bios h3 {
     font-size: 5rem;
     font-weight: 200;
     text-align: center;
     margin-bottom: 20px;
}

.crew-bios .tony-pic,
.crew-bios .allison-pic,
.crew-bios .soft-pic{
     width: 40%;
     height: auto;
     margin: 25px;
     float: left;
}


.crew-bios .kathbath-pic,
.crew-bios .enrique-pic,
.crew-bios .mackelmore-pic{
     width: 40%;
     height: auto;
     margin: 25px;
     float: right;
}

.crew-bios h4 {
     padding: 0;
     margin: 0;
     font-size: 2rem;
}

.crew-bios h5 {
     padding: 0;
     margin: 0;
     color: crimson;
     font-size: 1rem;
}

/******************************************
/* ADDITIONAL STYLES
/*******************************************/




header > h1 {
     display: none;
}


.hero {
     background-color: black;
     height: 60vh;
     min-height: 600px;

     display: flex;
     flex-direction: column;
     justify-content: flex-end;



   }

                         @media only screen and (max-device-width: 600px) {

                              .hero{
                                   height: 40vh;
                              }

                              .hero-nav > ul {
                                   display: none;
                              }
                         }
   
     .fallbackImage {
          width: 100vw;
          height: 580px;
          position: absolute;
          object-fit: cover;
     }


     .hero-vid {
          z-index: 1;
          position: absolute;
          height: 580px;
          width: 100%;
          object-fit: cover;

        }
/* ... */

